--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
+.linear-gradiant{
+   background-image: linear-gradient(to bottom,rgba(255,255,255, 0) 60%,  rgba(0,0,0,1)); 
+}
